# grippy-code-review

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  nboot-spec.json  pyproject.toml
.github/: quality-gate.json  test-parity-map.json
.github/workflows/: codeql.yml  grippy-review.yml  pre-commit.yml  release.yml  scorecard.yml  tests.yml
docs/plans/: 2026-02-27-security-hardening-design.md  2026-02-27-security-hardening-plan.md  2026-02-28-docs-refresh-design.md  2026-02-28-docs-refresh-plan.md  2026-02-28-fix-finding-duplication-design.md
scripts/: check_test_parity.py  quality_gate.py
src/grippy/: __init__.py  __main__.py  agent.py  codebase.py  embedder.py  github_review.py  graph.py  persistence.py  prompts.py  retry.py  review.py  schema.py  validate_q4.py
src/grippy/prompts_data/: ascii-art.md  confidence-filter.md  github-app.md  output-schema.md  rule-findings-context.md  scoring-rubric.md  sdk-easter-egg.md  tone-calibration.md
tests/: test_fuzz.py  test_grippy_agent.py  test_grippy_agent_evolution.py  test_grippy_codebase.py  test_grippy_embedder.py  test_grippy_github_review.py  test_grippy_graph.py  test_grippy_persistence.py  test_grippy_prompts.py  test_grippy_retry.py  test_grippy_review.py  test_grippy_rule_ci.py  test_grippy_rule_llm.py  test_grippy_rule_secrets.py  test_grippy_rule_sinks.py  test_grippy_rule_traversal.py  test_grippy_rule_workflow.py  test_grippy_rules_config.py  test_grippy_rules_context.py  test_grippy_rules_engine.py  test_grippy_schema.py  test_hostile_environment.py
(+12 files in other folders)
